--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,21 +2,28 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.image-row {
+  position: absolute;
+  right: 0;
+}
+.image-row img {
+  max-height: 28vh;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 60vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+
+.App-header .image-row h1 {
+  margin-left: 30vw;
 }
 
 .App-link {
